--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -16,12 +16,14 @@
             android:layout_height="44dp">
 
             <ImageView
+                android:id="@+id/iv_back"
                 android:layout_width="38dp"
                 android:layout_height="43dp"
                 android:padding="15dp"
                 android:src="@drawable/order_ic_fanhuio" />
 
             <ImageView
+                android:id="@+id/iv_share_it"
                 android:layout_width="44dp"
                 android:layout_height="44dp"
                 android:layout_toLeftOf="@id/iv_collection"
@@ -53,6 +55,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/iv_arrow"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_margin="15dp"
@@ -65,6 +68,7 @@
                 android:layout_marginTop="17dp">
 
                 <TextView
+                    android:id="@+id/tv_store_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="果实先生（新安店）"
@@ -81,6 +85,7 @@
             </RelativeLayout>
 
             <TextView
+                android:id="@+id/tv_evaluation"
                 android:layout_width="32dp"
                 android:layout_height="36dp"
                 android:layout_alignParentEnd="true"
@@ -143,6 +148,7 @@
         </LinearLayout>
         <!--代金券-->
         <LinearLayout
+            android:id="@+id/ll_voucher"
             android:layout_width="128dp"
             android:layout_height="25dp"
             android:layout_marginLeft="15dp"
@@ -159,6 +165,7 @@
                 android:textSize="10sp" />
 
             <TextView
+                android:id="@+id/tv_money"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="4dp"
@@ -187,6 +194,7 @@
         </LinearLayout>
         <!--公告-->
         <RelativeLayout
+            android:id="@+id/rl_expand"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp">
@@ -292,10 +300,12 @@
         android:orientation="horizontal">
 
         <ListView
+            android:id="@+id/lv_left"
             android:layout_width="100dp"
             android:layout_height="match_parent" />
 
         <ListView
+            android:id="@+id/lv_right"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingLeft="15dp"
