--- a/app/src/main/res/layout/item_voucher.xml
+++ b/app/src/main/res/layout/item_voucher.xml
@@ -40,6 +40,7 @@
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_amount"
@@ -50,12 +51,14 @@
     </RelativeLayout>
 
     <ImageView
+        android:id="@+id/iv_received"
         android:layout_width="35dp"
         android:layout_height="27dp"
         android:layout_alignParentEnd="true"
         android:background="@drawable/meal_ic_yinzhang" />
 
     <TextView
+        android:id="@+id/tv_coupon"
         android:layout_width="49dp"
         android:layout_height="27dp"
         android:layout_alignParentEnd="true"
