订单列表接口联调    缺少商品名称

--- a/app/src/main/res/layout/fragment_all_order.xml
+++ b/app/src/main/res/layout/fragment_all_order.xml
@@ -1,8 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/category_color"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -13,7 +14,10 @@
             android:id="@+id/lv_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            android:divider="@color/category_color"
+            android:dividerHeight="15dp"
+            android:padding="15dp"
+            tools:listitem="@layout/item_order" />
     </RelativeLayout>
 
 </LinearLayout>
