--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -101,11 +101,22 @@
 
             </RelativeLayout>
 
-            <ImageView
+            <com.stx.xhb.xbanner.XBanner
+                android:id="@+id/xbanner"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:layout_margin="15dp"
-                android:background="@drawable/bnt_banner" />
+                app:AutoPlayTime="6000"
+                app:pointNormal="@drawable/shape_noraml"
+                app:pointSelect="@drawable/shape_selected"
+                app:pointsPosition="RIGHT"
+                app:tipTextSize="12sp"
+                app:isShowNumberIndicator="true"
+                app:isShowIndicatorOnlyOne="true"
+                app:pageChangeDuration="800"
+                app:pointsVisibility="false"
+                app:isClipChildrenMode="false"
+                />
 
             <!--分类第一排-->
             <LinearLayout
