订单列表跳转订单详情

--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/rl_announcement"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_white"
@@ -7,7 +9,7 @@
 
     <LinearLayout
         android:id="@+id/ll_store_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="30dp">
 
         <com.baba.GlideImageView
@@ -34,15 +36,18 @@
             android:layout_marginLeft="7dp"
             android:background="@drawable/order_ic_xz1" />
 
-        <TextView
-            android:id="@+id/tv_status"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="end|center_vertical"
-            android:text="订单已完成"
-            android:textColor="@color/hint_text_color"
-            android:textSize="14sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_status"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/iv_line"
+        android:layout_toRightOf="@id/ll_store_name"
+        android:gravity="end|center_vertical"
+        android:text="订单已完成"
+        android:textColor="@color/hint_text_color"
+        android:textSize="14sp" />
 
     <ImageView
         android:id="@+id/iv_line"
@@ -70,12 +75,12 @@
             android:textSize="14sp" />
 
         <!--<TextView-->
-            <!--android:id="@+id/tv_number"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text=" 等 2件商品"-->
-            <!--android:textColor="@color/typed_text_color"-->
-            <!--android:textSize="14sp" />-->
+        <!--android:id="@+id/tv_number"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text=" 等 2件商品"-->
+        <!--android:textColor="@color/typed_text_color"-->
+        <!--android:textSize="14sp" />-->
 
         <TextView
             android:id="@+id/tv_money"
