--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="category_color">#F5F5F5</color>
     <color name="white">#FFFFFF</color>
     <color name="red">#FF4A4A</color>
+    <color name="orange">#FF853C</color>
 </resources>
