--- a/app/src/main/res/layout/activity_order_tracking.xml
+++ b/app/src/main/res/layout/activity_order_tracking.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/category_color"
         android:orientation="vertical">
         <!--订单状态-->
         <LinearLayout
+            android:id="@+id/ll_order_status"
             android:layout_width="match_parent"
             android:layout_height="270dp"
             android:background="@drawable/order_bnt_jiedan"
@@ -18,18 +19,20 @@
             android:paddingRight="15dp">
 
             <ImageView
-                android:layout_width="8dp"
-                android:layout_height="13dp"
+                android:id="@+id/iv_back"
+                android:layout_width="38dp"
+                android:layout_height="43dp"
                 android:layout_marginTop="21dp"
-                android:background="@drawable/order_ic_fanhuio" />
+                android:padding="15dp"
+                android:src="@drawable/order_ic_fanhuio" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_text_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="等待商家接单"
@@ -59,6 +62,7 @@
                     android:src="@drawable/order_ic_tongzhi" />
 
                 <TextView
+                    android:id="@+id/tv_notice"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
@@ -104,6 +108,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="12:40"
@@ -136,6 +141,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_button_one"
                     android:layout_width="84dp"
                     android:layout_height="33dp"
                     android:layout_marginLeft="15dp"
@@ -146,6 +152,7 @@
                     android:textSize="15sp" />
 
                 <TextView
+                    android:id="@+id/tv_button_two"
                     android:layout_width="84dp"
                     android:layout_height="33dp"
                     android:layout_marginLeft="15dp"
@@ -156,6 +163,7 @@
                     android:textSize="15sp" />
 
                 <TextView
+                    android:id="@+id/tv_button_three"
                     android:layout_width="84dp"
                     android:layout_height="33dp"
                     android:layout_marginLeft="15dp"
