--- a/app/src/main/res/layout/item_tracking_commodity.xml
+++ b/app/src/main/res/layout/item_tracking_commodity.xml
@@ -6,7 +6,7 @@
     android:paddingTop="15dp"
     android:paddingRight="15dp">
 
-    <ImageView
+    <com.baba.GlideImageView
         android:id="@+id/iv_avatar"
         android:layout_width="49dp"
         android:layout_height="49dp"
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="13dp"
         android:layout_toRightOf="@id/iv_avatar"
-        android:text="现切黑美人西瓜"
+        android:text=""
         android:textColor="@color/hint_text_color"
         android:textSize="16sp" />
 
@@ -31,7 +31,7 @@
         android:layout_toRightOf="@id/iv_avatar">
 
         <TextView
-            android:id="@+id/tv_money"
+            android:id="@+id/tv_now_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -41,23 +41,25 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@id/tv_original_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/tv_money"
+            android:layout_toRightOf="@id/tv_now_price"
             android:text="￥36.9"
+
             android:textColor="@color/navigation_color"
             android:textSize="12sp" />
 
         <TextView
+            android:id="@id/tv_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:text="x1"
             android:textColor="@color/black"
-
             android:textSize="17sp" />
 
     </RelativeLayout>
