--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="white">#FFFFFF</color>
     <color name="red">#FF4A4A</color>
     <color name="orange">#FF853C</color>
+    <color name="fff">#F0F0F0</color>
 </resources>
