--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent"
     android:background="@color/category_color"
     android:orientation="vertical">
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="@color/white"/>
+        android:background="@color/white" />
     <!--头像-->
     <RelativeLayout
         android:layout_width="match_parent"
@@ -26,11 +27,10 @@
             android:textStyle="bold" />
 
         <RelativeLayout
-            android:layout_below="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            >
+            android:layout_below="@+id/tv_name"
+            android:layout_marginLeft="15dp">
 
             <ImageView
                 android:layout_width="14dp"
