--- a/app/src/main/res/layout/activity_shop_home.xml
+++ b/app/src/main/res/layout/activity_shop_home.xml
@@ -108,53 +108,13 @@
         </RelativeLayout>
         <!--满立减-->
         <LinearLayout
+            android:id="@+id/ll_full_cut"
             android:layout_width="match_parent"
             android:layout_height="19dp"
             android:layout_marginLeft="15dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"/>
 
-            <TextView
-                android:layout_width="44dp"
-                android:layout_height="17dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/bg_white_red"
-                android:gravity="center"
-                android:text="20减10"
-                android:textColor="@color/red"
-                android:textSize="10sp" />
-
-            <TextView
-                android:layout_width="44dp"
-                android:layout_height="17dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/bg_white_red"
-                android:gravity="center"
-                android:text="40减15"
-                android:textColor="@color/red"
-                android:textSize="10sp" />
-
-            <TextView
-                android:layout_width="44dp"
-                android:layout_height="17dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/bg_white_red"
-                android:gravity="center"
-                android:text="60减30"
-                android:textColor="@color/red"
-                android:textSize="10sp" />
-
-            <TextView
-                android:layout_width="44dp"
-                android:layout_height="17dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/bg_white_red"
-                android:gravity="center"
-                android:text="90减45"
-                android:textColor="@color/red"
-                android:textSize="10sp" />
-
-        </LinearLayout>
         <!--代金券-->
         <LinearLayout
             android:id="@+id/ll_voucher"
@@ -226,39 +186,29 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <com.ogaclejapan.smarttablayout.SmartTabLayout
+    <com.ifhu.meiwei.ui.view.MySmartTabLayout
         android:id="@+id/viewpagertab"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        app:stl_indicatorAlwaysInCenter="false"
-        app:stl_indicatorWithoutPadding="false"
-        app:stl_indicatorInFront="true"
-        app:stl_indicatorInterpolation="smart"
-        app:stl_indicatorGravity="bottom"
-        app:stl_indicatorColor="@color/main_color"
-        app:stl_indicatorThickness="3dp"
-        app:stl_indicatorWidth="20dp"
-        app:stl_indicatorCornerRadius="2dp"
-        app:stl_overlineColor="#4D000000"
-        app:stl_overlineThickness="0dp"
-        app:stl_underlineColor="#F0F0F0"
-        app:stl_underlineThickness="1dp"
-        app:stl_dividerColor="#4D000000"
+        android:layout_height="38dp"
+        android:background="#FFF"
+        app:stl_defaultTabBackground="@android:color/transparent"
+        app:stl_defaultTabTextColor="@drawable/tab_title_selector"
+        app:stl_defaultTabTextHorizontalPadding="10dp"
+        app:stl_defaultTabTextSize="14.5dp"
+        app:stl_distributeEvenly="true"
+        app:stl_dividerColor="@color/divide_line"
         app:stl_dividerThickness="0dp"
-        app:stl_defaultTabBackground="?attr/selectableItemBackground"
-        app:stl_defaultTabTextAllCaps="true"
-        app:stl_defaultTabTextColor="#666666"
-        app:stl_defaultTabTextSize="17sp"
-        app:stl_defaultTabTextHorizontalPadding="16dp"
-        app:stl_defaultTabTextMinWidth="0dp"
-        app:stl_distributeEvenly="false"
-        app:stl_clickable="true"
-        app:stl_titleOffset="24dp"
-        app:stl_drawDecorationAfterTab="false"
+        app:stl_indicatorColor="#FBB000"
+        app:stl_indicatorGravity="bottom"
+        app:stl_indicatorInFront="true"
+        app:stl_indicatorInterpolation="linear"
+        app:stl_indicatorThickness="2dp"
+        app:stl_indicatorWidth="20dp"
+        app:stl_underlineColor="@color/divide_line"
+        app:stl_underlineThickness="0.5dp"
         />
 
-
-    <android.support.v4.view.ViewPager
+    <com.ifhu.meiwei.ui.view.MyViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
