--- a/app/src/main/res/layout/fragment_menulist.xml
+++ b/app/src/main/res/layout/fragment_menulist.xml
@@ -1,26 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
-    <ListView
-        android:id="@+id/lv_category"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:background="@color/category_color"
-        android:dividerHeight="0dp"
-        android:divider="@null"
-        android:scrollbars="none" />
+    >
 
-    <ListView
-        android:id="@+id/lv_product"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:scrollbars="none"
-        android:dividerHeight="0dp"
-        android:divider="@null"
-        />
-</LinearLayout>
+        android:orientation="horizontal"
+        android:paddingBottom="60dp">
+
+        <ListView
+            android:id="@+id/lv_category"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="@color/category_color"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:scrollbars="none"/>
+
+        <ListView
+            android:id="@+id/lv_product"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:scrollbars="none"
+            />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:layout_margin="15dp"
+        android:background="@drawable/bg_left_black">
+
+        <ImageView
+            android:id="@+id/iv_icon"
+            android:layout_width="50dp"
+            android:layout_height="26dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="21dp"
+            android:background="@drawable/meal_bnt_gouwuche"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/iv_icon"
+            android:text="空空如也"
+            android:textColor="@color/text_white"
+            android:textSize="15sp"
+            android:visibility="visible"/>
+
+        <RelativeLayout
+            android:id="@+id/rl_price"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            android:layout_toRightOf="@id/iv_icon">
+
+            <TextView
+                android:id="@+id/tv_total_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="￥0"
+                android:textColor="@color/text_white"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/tv_shipping_fee"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="3dp"
+                android:text="另需配送费￥5"
+                android:textColor="@color/text_white"
+                android:textSize="11sp"/>
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_at_less"
+            android:layout_width="110dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
+            android:background="@drawable/action_bar_selector"
+            android:gravity="center"
+            android:text="￥15起送"
+            android:textColor="@color/text_white"
+            android:textSize="17sp"/>
+    </RelativeLayout>
+</RelativeLayout>
