--- a/app/src/main/res/layout/fragment_menulist.xml
+++ b/app/src/main/res/layout/fragment_menulist.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:paddingBottom="60dp">
+        >
 
         <ListView
             android:id="@+id/lv_category"
@@ -18,7 +18,8 @@
             android:background="@color/category_color"
             android:divider="@null"
             android:dividerHeight="0dp"
-            android:scrollbars="none"/>
+            android:scrollbars="none"
+            android:paddingBottom="60dp"/>
 
         <ListView
             android:id="@+id/lv_product"
@@ -28,6 +29,7 @@
             android:divider="@null"
             android:dividerHeight="0dp"
             android:scrollbars="none"
+            android:paddingBottom="60dp"
             />
     </LinearLayout>
 
