--- a/app/src/main/res/layout/item_evaluation_like.xml
+++ b/app/src/main/res/layout/item_evaluation_like.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_announcement_name"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:singleLine="true"
@@ -18,8 +19,10 @@
         android:layout_marginRight="15dp">
 
         <ImageView
+            android:id="@+id/iv_like"
             android:layout_width="16dp"
             android:layout_height="16dp"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/meal_ic_dianzan" />
 
         <TextView
@@ -31,8 +34,10 @@
             android:textSize="14sp" />
 
         <ImageView
+            android:id="@+id/iv_nolike"
             android:layout_width="16dp"
             android:layout_height="16dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
             android:background="@drawable/pingjia_ic_dianz1" />
 
