--- a/app/src/main/res/layout/item_home_shop.xml
+++ b/app/src/main/res/layout/item_home_shop.xml
@@ -9,7 +9,8 @@
         android:layout_width="62dp"
         android:layout_height="62dp"
         android:layout_margin="15dp"
-        android:background="@drawable/pingjia_ic_manyi" />
+        android:scaleType="fitXY"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -27,24 +28,22 @@
             android:textStyle="bold" />
 
         <LinearLayout
-            android:id="@+id/ll_star"
+            android:id="@+id/ll_merchant_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_commodity_name"
             android:layout_marginTop="4dp"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageView style="@style/star" />
-
-            <ImageView style="@style/star" />
-
-            <ImageView style="@style/star" />
-
-            <ImageView style="@style/star" />
-
-            <ImageView style="@style/star" />
+          <LinearLayout
+              android:id="@+id/ll_star"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:orientation="horizontal"/>
 
             <TextView
+                android:id="@+id/tv_sale_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="11dp"
@@ -53,6 +52,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/tv_away"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="15dp"
@@ -64,11 +64,12 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_shipping_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/ll_star"
+            android:layout_below="@id/ll_merchant_info"
             android:layout_marginTop="2dp"
-            android:text="起送￥15 | 配送#3"
+            android:text="起送￥15 | 配送费￥3"
             android:textColor="@color/typed_text_color"
             android:textSize="12sp" />
     </RelativeLayout>
@@ -96,53 +97,13 @@
         android:textSize="10sp" />
 
     <LinearLayout
+        android:id="@+id/ll_reduction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_limit_discounts"
         android:layout_marginLeft="92dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="10dp">
-
-        <TextView
-            android:layout_width="45dp"
-            android:layout_height="17dp"
-            android:layout_marginRight="7dp"
-            android:background="@drawable/bg_full_reduction"
-            android:gravity="center"
-            android:text="20减10"
-            android:textColor="#FF4A4A"
-            android:textSize="10sp" />
-
-        <TextView
-            android:layout_width="45dp"
-            android:layout_height="17dp"
-            android:layout_marginRight="7dp"
-            android:background="@drawable/bg_full_reduction"
-            android:gravity="center"
-            android:text="45减15"
-            android:textColor="#FF4A4A"
-            android:textSize="10sp" />
-
-        <TextView
-            android:layout_width="45dp"
-            android:layout_height="17dp"
-            android:layout_marginRight="7dp"
-            android:background="@drawable/bg_full_reduction"
-            android:gravity="center"
-            android:text="68减20"
-            android:textColor="#FF4A4A"
-            android:textSize="10sp" />
-
-        <TextView
-            android:layout_width="45dp"
-            android:layout_height="17dp"
-            android:layout_marginRight="7dp"
-            android:background="@drawable/bg_full_reduction"
-            android:gravity="center"
-            android:text="98减35"
-            android:textColor="#FF4A4A"
-            android:textSize="10sp" />
-
-    </LinearLayout>
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp"/>
 
 </RelativeLayout>
