--- a/app/src/main/res/layout/item_shop_full_cut.xml
+++ b/app/src/main/res/layout/item_shop_full_cut.xml
@@ -2,8 +2,10 @@
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tv_full_cut"
-    android:layout_width="44dp"
+    android:layout_width="wrap_content"
     android:layout_height="17dp"
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp"
     android:layout_marginRight="10dp"
     android:background="@drawable/bg_white_red"
     android:gravity="center"
