--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,7 +34,7 @@
     </style>
 
     <style name="star">
-        <item name="android:background">@drawable/pingjia_ic_daxing1</item>
+        <item name="android:background">@drawable/star_selector</item>
         <item name="android:layout_width">11dp</item>
         <item name="android:layout_height">11dp</item>
         <item name="android:layout_marginRight">2dp</item>
