--- a/app/src/main/res/layout/fragment_menulist.xml
+++ b/app/src/main/res/layout/fragment_menulist.xml
@@ -21,7 +21,7 @@
             android:scrollbars="none"
             android:paddingBottom="60dp"/>
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/lv_product"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
