--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/white</item>
         <item name="colorAccent">@color/black</item>
+        <!--<item name="android:colorControlHighlight">@color/bg_white</item>-->
     </style>
 
     <style name="base_phone_edit" parent="base_edit">
