--- a/app/src/main/res/layout/activity_order_tracking.xml
+++ b/app/src/main/res/layout/activity_order_tracking.xml
@@ -14,23 +14,22 @@
             android:id="@+id/ll_order_status"
             android:layout_width="match_parent"
             android:layout_height="270dp"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/iv_bg_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/order_bnt_jiedan"
-                />
+                android:background="@drawable/order_bnt_jiedan" />
+
             <LinearLayout
                 android:id="@+id/ll_state"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:layout_below="@+id/iv_back"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/iv_back"
+                android:layout_marginStart="15dp"
                 android:layout_marginTop="28dp"
+                android:layout_marginEnd="15dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -52,11 +51,11 @@
             <!--订单通知-->
             <LinearLayout
                 android:id="@+id/ll_ring"
-                android:layout_below="@+id/ll_state"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginTop="21dp"
+                android:layout_below="@+id/ll_state"
                 android:layout_marginStart="15dp"
+                android:layout_marginTop="21dp"
                 android:layout_marginEnd="15dp"
                 android:background="@drawable/bg_white">
 
@@ -105,8 +104,6 @@
                     android:layout_centerInParent="true"
                     android:background="@drawable/order_ic_tzhuai" />
             </RelativeLayout>
-
-
 
 
             <LinearLayout
@@ -191,8 +188,6 @@
                     android:textColor="@color/main_color"
                     android:textSize="15sp" />
             </LinearLayout>
-
-            <TextView style="@style/line_fff" />
 
             <RelativeLayout
                 android:id="@+id/rl_refund"
@@ -549,20 +544,33 @@
                 <TextView
                     android:id="@+id/tv_delivery_address"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="配送地址"
                     android:textColor="@color/hint_text_color"
                     android:textSize="15sp" />
 
                 <TextView
-                    android:id="@+id/tv_announcement"
+                    android:id="@+id/tv_announcement_one"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="30dp"
                     android:layout_toRightOf="@id/tv_delivery_address"
-                    android:gravity="right"
-                    android:text="张铭明(先生) 15865482564海关大厦(20楼2010室)"
+                    android:gravity="end"
+                    android:text="张铭明(先生)  15865482564"
+                    android:textColor="@color/typed_text_color"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/tv_announcement_two"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_announcement_one"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginLeft="30dp"
+                    android:layout_toRightOf="@id/tv_delivery_address"
+                    android:gravity="end"
+                    android:text="海关大厦(20楼2010室)"
                     android:textColor="@color/typed_text_color"
                     android:textSize="15sp" />
 
@@ -576,6 +584,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="15dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/bg_white"
             android:orientation="vertical">
             <!--订单信息-->
@@ -617,9 +626,11 @@
                     android:layout_marginRight="62dp"
                     android:text="6227 2430 0988 4740 5"
                     android:textColor="@color/typed_text_color"
+                    android:textIsSelectable="true"
                     android:textSize="15sp" />
 
                 <TextView
+                    android:id="@+id/tv_copy"
                     android:layout_width="35dp"
                     android:layout_height="20dp"
                     android:layout_alignParentEnd="true"
