--- a/app/src/main/res/layout/fragment_all_order.xml
+++ b/app/src/main/res/layout/fragment_all_order.xml
@@ -5,7 +5,7 @@
     android:background="@color/category_color"
     android:orientation="vertical">
 
-    <include layout="@layout/item_empty"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,7 +16,10 @@
             android:layout_height="match_parent"
             android:divider="@color/category_color"
             android:dividerHeight="15dp"
-            android:padding="15dp" />
+            android:padding="15dp"
+            tools:listitem="@layout/item_order" />
+        <include layout="@layout/item_empty" />
+
     </RelativeLayout>
 
 </LinearLayout>
