--- a/app/src/main/res/layout/item_tracking_commodity.xml
+++ b/app/src/main/res/layout/item_tracking_commodity.xml
@@ -10,7 +10,8 @@
         android:id="@+id/iv_avatar"
         android:layout_width="49dp"
         android:layout_height="49dp"
-        android:background="@drawable/tab_bnt_bj_mlj" />
+        android:background="@drawable/tab_bnt_bj_mlj"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/tv_product_name"
