--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -45,6 +45,25 @@
         android:layout_marginRight="15dp"
         android:gravity="center_vertical"
         android:text="密码登录"
+        android:visibility="invisible"
         android:textColor="@color/navigation_color"
         android:textSize="17sp" />
+
+    <ImageView
+        android:id="@+id/iv_share_it"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_toLeftOf="@id/iv_collection"
+        android:padding="13dp"
+        android:visibility="invisible"
+        android:src="@drawable/meal_ic_fxhei" />
+
+    <ImageView
+        android:id="@+id/iv_collection"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_alignParentEnd="true"
+        android:visibility="invisible"
+        android:padding="13dp"
+        android:src="@drawable/meal_ic_schei" />
 </RelativeLayout>
